--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
     testCompile 'junit:junit:4.12'
-    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     compile files('C:/Users/manza/Documents/project_BandGSR/MBandGSR/libs/microsoft-band-1.3.20307.2.jar')
+    compile 'com.jjoe64:graphview:4.2.1'
 }
