--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,16 +24,17 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile files('C:/Users/manza/Documents/project_BandGSR/MBandGSR/libs/microsoft-band-1.3.20307.2.jar')
+
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:design:22.2.0'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'in.srain.cube:grid-view-with-header-footer:1.0.12'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
-    testCompile 'junit:junit:4.12'
-    compile files('C:/Users/manza/Documents/project_BandGSR/MBandGSR/libs/microsoft-band-1.3.20307.2.jar')
     compile 'com.jjoe64:graphview:4.2.1'
     compile 'de.hdodenhof:circleimageview:1.3.0'
-
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
