--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:design:22.2.0'
+    compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'in.srain.cube:grid-view-with-header-footer:1.0.12'
     compile 'com.jakewharton:butterknife:7.0.1'
