--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".Formulario"></activity>
         <activity android:name=".DatosGSR"></activity>
         <activity android:name=".InfoExperiencia"></activity>
+        <activity android:name=".UsuariosExperiencia"></activity>
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
