Añadido EditText donde darle nombre a la experiencia
Cuando se añade el nombre, aparece el botón para añadir nuevo usuario

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".DatosGSR"></activity>
         <activity android:name=".InfoExperiencia"></activity>
         <activity android:name=".UsuariosExperiencia"></activity>
+        <activity android:name=".NuevaExperiencia"></activity>
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
