--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.furazin.android.mbandgsr"
         minSdkVersion 19
@@ -10,6 +10,12 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                includeCompileClasspath false
+            }
+        }
     }
     buildTypes {
         release {
@@ -20,24 +26,27 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile files('C:/Users/manza/Documents/project_BandGSR/MBandGSR/libs/microsoft-band-1.3.20307.2.jar')
+    implementation files('C:/Users/manza/Documents/project_BandGSR/MBandGSR/libs/microsoft-band-1.3.20307.2.jar')
 
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:design:22.2.0'
-    compile 'com.android.support:recyclerview-v7:22.2.0'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'in.srain.cube:grid-view-with-header-footer:1.0.12'
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
-    compile 'com.jjoe64:graphview:4.2.1'
-    compile 'de.hdodenhof:circleimageview:1.3.0'
+//    implementation 'com.android.support:appcompat-v7:27.0.0'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+
+//    implementation 'com.android.support:recyclerview-v7:22.2.0'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+//    implementation 'com.android.support:cardview-v7:25.3.1'
+    implementation 'in.srain.cube:grid-view-with-header-footer:1.0.12'
+    implementation 'com.jakewharton:butterknife:7.0.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
+    implementation 'com.jjoe64:graphview:4.2.2'
+    implementation 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.google.firebase:firebase-storage:10.0.1'
-    testCompile 'junit:junit:4.12'
+    testImplementation'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
