--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         <activity android:name=".MainActivity" ></activity>
         <activity android:name=".Formulario"></activity>
         <activity android:name=".DatosGSR"></activity>
-        <activity android:name=".InfoExperiencia"></activity>
+        <activity android:name=".InfoSujeto"></activity>
         <activity android:name=".UsuariosExperiencia"></activity>
         <activity android:name=".NuevaExperiencia"></activity>
         <activity android:name=".ScanActivity"
