--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <activity android:name=".Formulario"></activity>
         <activity android:name=".DatosGSR"></activity>
         <activity android:name=".InfoSujeto"></activity>
-        <activity android:name=".UsuariosExperiencia"></activity>
+        <activity android:name=".SujetosExperiencia"></activity>
         <activity android:name=".NuevaExperiencia"></activity>
         <activity android:name=".ScanActivity"
             android:label="@string/app_name">
